# nerf-qa

./: .gitignore  .~lock.results.csv#  Test2_new.csv  Test_2_iqa.csv  bt500_simple.py  control.py  conver_video.py  conver_video2.py  correlations.csv  data_prep.py  participants.csv  play.ipynb  plot_results.py  plot_results_bootstrapping.py  plot_results_test2.py  plot_results_test2_aspect.py  plot_results_test2_bootstrap.py  plot_results_test2_bootstrap2.py  plot_results_test2_bootstrap_aspect.py  plot_results_test2_bt500.py  plot_results_test2_cv.py  plot_results_test2_per_scene.py  prep.py  pyproject.toml  reeval.py  results.csv  results_combined.csv  results_combined_test2.csv  results_cv_4.csv  results_e3_0.csv  results_e3_1.csv  results_e3_2.csv  results_e3_3.csv  results_fin.csv  results_fin_0.csv  results_fin_1.csv  results_fin_2.csv  results_fin_3.csv  results_reeval.csv  results_table.tex  (+45 more)
nerf_qa/: data.py  data_fr.py  demo_match.py  image_retrieval.py  logger.py  model.py  model_nr.py  model_nr_v2.py  model_nr_v3.py  model_nr_v4.py  model_nr_v5.py  model_nr_v6.py  model_nr_v7.py  model_nr_v8.py  model_stats.py  nerf_nr_qa_prep.py  nerf_nr_qa_prep_2.py  nerf_nr_qa_prep_3.py  nerf_nr_qa_prep_4.py  settings.py  settings_fr.py  vis.py
nerf_qa/ADISTS/: ADISTS.py  __init__.py
nerf_qa/DISTS_pytorch/: DISTS_pt copy.py  DISTS_pt.py  DISTS_pt_original.py  DISTS_pt_softmax.py
nerf_qa/ICNet/: ICNet.py
nerf_qa/layers/: __init__.py
scripts/: init_sweep.sh
wandb/: config-adaptive.yaml  config-early.yaml  config-huber.yaml  config-nerf-qa-logistic.yaml  config-nerf-qa-sf.yaml  config-nerf-qa.yaml  config-nr.yaml  config-sf.yaml  config-stats.yaml  config-test2.yaml  config.yaml
(+85 files in other folders)
