[tool.poetry]
name = "nerf-qa"
version = "0.1.0"
description = ""
authors = ["kobejean <s1292010@u-aizu.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
torchvision = "^0.17.0"
numpy = "^1.26.4"
opencv_python = "^4.9.0"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
